--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
                 <i className="fas fa-envelope"></i>
               </a>
               <a
-                href="https://linkedin.com/in/gnaneswarm"
+                href="https://www.linkedin.com/in/gnaneswar-markat-12769b1a8/"
                 target="_blank"
                 rel="noopener noreferrer"
                 className="text-2xl hover:text-blue-400"
@@ -378,7 +378,7 @@
                 <i className="fab fa-linkedin"></i>
               </a>
               <a
-                href="https://github.com/your-github-username" // Update with your GitHub profile if applicable
+                href="https://github.com/Gnaneswar99" // Update with your GitHub profile if applicable
                 target="_blank"
                 rel="noopener noreferrer"
                 className="text-2xl hover:text-blue-400"
