--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
             </p>
             <div className="flex justify-center space-x-6">
               <a
-                href="mailto:gmarkat@buffalo.edu"
+                href="gmarkat@buffalo.edu"
                 className="text-2xl hover:text-blue-400"
               >
                 <i className="fas fa-envelope"></i>
